TestSuite/errors/err0388.pas
type
  T1 = partial static class static a: integer; end;
  
  T1 = partial class end;
  
begin
 
end.